Corrected the light mode dark mode problem with the text

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -246,7 +246,7 @@ main {
     visibility: visible;
 }
 .message-popup.open {
-    right: 1%;
+    
     display: flex;
     flex-direction: column;
     height: max-content;
